--- a/diceGame.css
+++ b/diceGame.css
@@ -1,6 +1,6 @@
 body {
 	color: black;
-	background: url(swordfightingcartoon1.jpg) no-repeat center center fixed; 
+	background: url(images/swordfightingcartoon1.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
